cmake_minimum_required(VERSION 3.10)
project(Sharded)

set(CMAKE_CXX_STANDARD 14)
set(GLFW_BUILD_DOCS OFF CACHE BOOL "" FORCE)
set(GLFW_BUILD_TESTS OFF CACHE BOOL "" FORCE)
set(GLFW_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)

if (!WIN32)
    add_subdirectory("libs/glfw")
else()
    link_directories("libs/win_glfw")
endif()
find_package(OpenGL REQUIRED)

add_library(Sharded SHARED Engine.cpp Engine.h)
if(WIN32)
    include_directories("libs/glfw/include")
    target_link_libraries(Sharded glfw ${OPENGL_glu_LIBRARY} ${GLFW_LIBRARIES} ${OPENGL_LIBRARIES})
else()
    target_link_libraries(Sharded glfw ${OPENGL_gl_LIBRARY} ${OPENGL_glu_LIBRARY})
    target_include_directories(Sharded PUBLIC ${OPENGL_INCLUDE_DIR})
endif(WIN32)
